--- a/api/package.json
+++ b/api/package.json
@@ -11,16 +11,20 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.3",
     "express": "~4.16.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.4",
+    "mysql2": "^3.12.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@types/node": "^22.13.4",
+    "drizzle-kit": "^0.30.4",
+    "nodemon": "^3.1.7",
+    "tsx": "^4.19.2"
   }
 }
