--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,24 +1,28 @@
+upstream react {
+    server react:5000;
+}
+
+upstream api {
+    server api:3000;
+}
+
 server {
     listen 80;
-    server_name localhost;
 
     location / {
-        proxy_pass http://react:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://react;
     }
 
-    location /api {
-        proxy_pass http://api:3000;
+    location /sockjs-node {
+        proxy_pass http://react;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
+    
+    location /api {
+        rewrite /(.*) /$1 break;
+        proxy_pass http://api;
+    }
+
 }
