--- a/compose.yaml
+++ b/compose.yaml
@@ -29,6 +29,7 @@ services:
       # DB_NAME: users
       # DB_PORT: 3306
       DATABASE_URL: mysql://root:password@mysql_db:3306/reviews
+      CHOKIDAR_USEPOLLING: true
     depends_on:
       - mysql_db
     networks:
