--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "openai": "^4.89.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
   },
