--- a/compose.yaml
+++ b/compose.yaml
@@ -25,6 +25,7 @@ services:
     environment:
       DATABASE_URL: mysql://root:password@mysql_db:3306/reviews
       CHOKIDAR_USEPOLLING: true
+      OPENAI_API_KEY: your_actual_api_key_here # Add your OpenAI API Key here
     depends_on:
       - mysql_db
     networks:
