--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.4",
     "drizzle-kit": "^0.30.4",
     "nodemon": "^3.1.7",
