--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -26,7 +27,8 @@
     "mysql2": "^3.12.0",
     "openai": "^4.90.0",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.5.0",
